// 使用protoc --go_out=. migration.proto生成./googleauthmigration.pb.go（我在Linux系统生成）
syntax = "proto3";

package googleauth;

option go_package = "./googleauth;googleauth";

message MigrationPayload {
  enum Algorithm {
    ALGO_INVALID = 0;
    SHA1 = 1;
    SHA256 = 2;
    SHA512 = 3;
    MD5 = 4;
  }
  enum OtpType {
    OTP_INVALID = 0;
    HOTP = 1;
    TOTP = 2;
  }
  enum DigitCount {
    DIGIT_COUNT_INVALID = 0;
    SIX = 1;
    EIGHT = 2;
  }
  message OTPParameters {
    bytes secret = 1;
    string name = 2;
    string issuer = 3;
    Algorithm algorithm = 4;
    DigitCount digits = 5;
    OtpType type = 6;
    int64 counter = 7;
  }
  repeated OTPParameters otp_parameters = 1;
  int32 version = 2;
  int32 batch_size = 3;
  int32 batch_index = 4;
  int32 batch_id = 5;
}